<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:text="@string/file"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableRow
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/filename"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_filename"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>

    <TableRow
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/path"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_path"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>

    <TableRow
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/size"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>


    <TableRow android:padding="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/time"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>

    <TextView
        android:text="@string/media"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableRow
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/resolution"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resolution"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>

    <TableRow
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_marginEnd="10dp"
            android:text="@string/duration"
            android:textColor="@color/colorBlack"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="test" />
    </TableRow>

</TableLayout>